package Importador;

import Main.Rdp;

public interface IImportador {
    public Rdp importar(String filename);
}